Update Dungeon Runner link in index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <a class="item" href="games/loveniovoce/loveniovoce.html">🍎 Lovení ovoce</a>
     <a class="item" href="games/psani/psani.html">📝 Psaní</a>
     <!-- Sem můžeš doplňovat další -->
-    <a class="item" href="#">⚔️ Dungeon Runner (coming soon)</a>
+    <a class="item" href="games/dungenrunner/dungenrunner.html">⚔️ Dungeon Runner (coming soon)</a>
 </div>
 
 <div class="section">
